--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="kids/kids.html">KIDS</a></li>
             <li> <a href="blueslidepark/bsp.html">Blue Slide Park</a></li>
             <li> <a href="macadelic/macadelic.html">Macadelic</a></li>
-            <li>Watching Movies with the Sound Off</li>
+            <li><a href="wmwtso/wmwtso.html">Watching Movies With The Sound Off</a></li>
             <li>Faces</li>
             <li>Good AM</li>
             <li>The Divine Feminine</li>
